[Bugfix] Fix Centering Mixins on Safari 8
* Safari 8 only supports the CSS3 2D Transform properties through the
 `-webkit` vendored property.
* Add the appropriate `-webkit-transform` properties to the
  `vertical-center`, `horizontal-center` and `absolute-center`
  mixins.

--- a/scss/util/_mixins.scss
+++ b/scss/util/_mixins.scss
@@ -196,6 +196,7 @@
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
 }
 
 /// Horizontally centers the element inside of its first non-static parent,
@@ -204,6 +205,7 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
 }
 
 /// Absolutely centers the element inside of its first non-static parent,
@@ -213,6 +215,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  -webkit-transform: translateX(-50%) translateY(-50%);
 }
 
 /// Iterates through breakpoints defined in `$breakpoint-classes` and prints the CSS inside the mixin at each breakpoint's media query. Use this with the grid, or any other component that has responsive classes.
